--- a/MidtermCalculator/MidtermCalculator/Base.lproj/Main.storyboard
+++ b/MidtermCalculator/MidtermCalculator/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <action selector="clearButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="5nI-4m-RsO"/>
+                                    <action selector="allClearButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="byJ-X3-c1F"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aPR-PF-zjB">
@@ -209,7 +209,7 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="siF-HD-05Y">
                                 <rect key="frame" x="0.0" y="20" width="600" height="68"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="92" id="oGZ-B7-RsH"/>
                                 </constraints>
